<resources>
    <!--alert start-->
    <string name="title_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="message_delete">Delete this plan?</string>
    <string name="message_coll_delete">Delete this collection?</string>
    <string name="recite_title">Option tips</string>
    <string name="yes">Yes</string>
    <string name="recite_message">Slide left and right to switch up and down pages. Click the expression button to mark it as learned</string>
    <!--alert end-->
    <string name="app_name">Translation</string>
    <string name="nav_home">Home</string>
    <string name="nav_voice">Voice</string>
    <string name="nav_picture">Picture</string>
    <string name="nav_dictionary">Dictionary</string>
    <string name="nav_my">My</string>
    <string name="text_input">Input text, press Enter to query</string>
    <string name="content_description_picture_translate">the picture was translated</string>
    <string name="recognize_result">Recognize result</string>
    <string name="translate_result">Translate result</string>

    <!--button name beginning-->
    <string name="btn_collection">Collection</string>
    <string name="btn_learnedWords">Learned words</string>
    <string name="btn_followingList">Following list</string>
    <string name="btn_followerList">Follower list</string>
    <string name="btn_translate">Translate</string>
    <string name="btn_translate_picture">Translate Picture</string>
    <string name="btn_start">start</string>
    <string name="btn_stop">stop</string>
    <string name="btn_album">Select from local album</string>
    <string name="btn_photo">Take a photo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_SignIn">Sign in</string>
    <string name="btn_submit">Sign up</string>
    <string name="btn_addPlan">Add plan</string>
    <string name="btn_signOut">SIGN OUT</string>
    <string name="btn_about">About</string>
    <string name="btn_manageAccount">Manage Account</string>
    <!--button name ending-->

    <!--textView name beginning-->
    <string name="textView_uploadPic">Click here to upload picture for translation</string>
    <string name="textView_dynamic">Dynamic</string>
    <string name="textView_userName">Sign in</string>
    <string name="textView_register">Sign up</string>
    <string name="textView_retrievePassword">Retrieve password</string>
    <string name="textView_searchOffLine">Search Vocabulary Off-line</string>
    <string name="textView_reciteWords">Recite Words</string>
    <string name="textView_cet4">CET4</string>
    <string name="textView_cet6">CET6</string>
    <string name="textView_toefl">TOEFL</string>
    <string name="textView_plans">Plans</string>
    <string name="textView_totalAndLearned">Total / Learned</string>
    <string name="textView_translation">Chinese translation :</string>
    <string name="textView_definition">Definition :</string>
    <string name="textView_option">Option</string>
    <string name="textView_recog">Recognize result :</string>
    <string name="textView_trans">Translate result :</string>
    <string name="textView_followers">Followers</string>
    <string name="textView_following">Following</string>
    <string name="textVeiw_keyWords">Key words</string>
    <!--textView name ending-->

    <!--editText name beginning-->
    <string name="edit_userName">User name / Email address</string>
    <string name="edit_password">Password</string>
    <string name="edit_repeat_password">Repeat password</string>
    <string name="edit_mail">E-mail</string>
    <string name="edit_PickUserName">User name</string>
    <string name="edit_input_word">Input word here</string>
    <!--editText name ending-->

    <!--Toast content beginning-->
    <string name="toast_delete_success">Delete success</string>
    <string name="toast_canNotSwitch">Can\'t not exchange source language and target language</string>
    <string name="toast_start_recognize">start recognize</string>
    <string name="register_success">Succeed to Sign up</string>
    <string name="register_fail">Fail to Sign up</string>
    <string name="register_fail_sendMail">Fail to send E-mail, register fail</string>
    <string name="submit">Fail to submit, please check the Sign up information</string>
    <string name="signIn_success">Succeed to Sign in</string>
    <string name="signIn_fail_password">Password error</string>
    <string name="signIn_fail_userName">User not existing</string>
    <string name="signIn_fail_mail">Unactivated Email</string>
    <string name="please_signIn">Haven\'t Sign in, please Sign in first</string>
    <string name="no_such_word">No such word</string>
    <string name="first_word">It\'s the first word</string>
    <string name="collection_success">Collection success</string>
    <string name="collection_failure">Collection failure</string>
    <!--Toast content ending-->
</resources>
