<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_album"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/btn_album"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:srcCompat="@color/gray_light_up" />

    <Button
        android:id="@+id/button_take_photo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/btn_photo"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        app:srcCompat="@color/gray_light_up" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/btn_cancel"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />
</LinearLayout>