<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light_up"
    tools:context=".PictureFragment">

    <Spinner
        android:id="@+id/spinner_pic_source"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:popupBackground="@drawable/shape_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_pic_dest"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:popupBackground="@drawable/shape_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_pic_switch"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/switch_icon"
        app:layout_constraintEnd_toStartOf="@+id/spinner_pic_dest"
        app:layout_constraintStart_toEndOf="@+id/spinner_pic_source"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_pic_upload"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle"
        android:contentDescription="@string/content_description_picture_translate"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_pic_source"
        app:srcCompat="@mipmap/default_pic" />

    <TextView
        android:id="@+id/tv_pic_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_uploadPic"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/im_pic_upload"
        app:layout_constraintEnd_toEndOf="@+id/im_pic_upload"
        app:layout_constraintStart_toStartOf="@+id/im_pic_upload"
        app:layout_constraintTop_toTopOf="@+id/im_pic_upload"
        app:layout_constraintVertical_bias="0.585" />

    <com.tsitsing.translation.animation.PPTVLoading
        android:id="@+id/PPTVLoading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/im_pic_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_pic_upload" />

    <TextView
        android:id="@+id/edit_OCR_result"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rectangle"
        android:ems="10"
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="8dp"
        android:paddingTop="34dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_pic_upload" />

    <TextView
        android:id="@+id/edit_translate_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rectangle"
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="8dp"
        android:paddingTop="34dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_OCR_result"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_image_view"
        android:elevation="3dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/recognize_result"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_OCR_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_OCR_result"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_image_view"
        android:elevation="3dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/translate_result"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_translate_result"
        app:layout_constraintStart_toStartOf="@+id/edit_translate_result"
        app:layout_constraintTop_toTopOf="@+id/edit_translate_result"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>